# DiT-HC

DiT/Mathlib_comparison/NativeBlas/: datasets.py
DiT/Mathlib_comparison/Our_optimized_blas/: env.sh  kpnn.py
DiT/Mathlib_comparison/openblas/: env.sh
DiT/Scalibility /all-in-one-comm/: models.py  sample_ddp.py
DiT/para_model/DP/: imagenet-mini-latents  node64xslot16
DiT/stepwise/AutoMem/: index.html
DiT/stepwise/CFTP/: imagenet-all-latents
DiT/stepwise/HMPI-comm/: env.sh  pretrained
DiT/stepwise/all-in-one-comm/: env.sh  kpnn.py  models.py
DiT/stepwise/gemm-opt/: ProcessGroupHMPI.cpython-312-aarch64-linux-gnu.so_4.6  imagenet-mini  models.py
Extensions implementation/HCOps/layernorm/csrc/lib/: CMakeLists.txt
Extensions implementation/HCOps/layernorm/csrc/lib/ops/: ops.hpp  torch_impl.hpp
Extensions implementation/HCOps/layernorm/csrc/lib/ops/linear/: layer_norm.cpp  torch_impl.cpp
Extensions implementation/HCOps/linear/: README.md  libkpprim.so_0331  pyproject.toml  setup.py
Extensions implementation/HCOps/mul/: data.txt  perf.data  perf.data.old  run.sh  setup.py  test.sh
Extensions implementation/HCOps/mul/csrc/lib/: CMakeLists.txt
Extensions implementation/HCOps/mul/csrc/lib/ops/: ops.hpp  torch_bind.cpp  torch_impl.hpp
Extensions implementation/HCOps/mul/csrc/lib/ops/mla/: op.cpp  torch_impl.cpp
Extensions implementation/HCOps/mul/csrc/lib/ops/modulate/: op.cpp  torch_impl.cpp
Extensions implementation/mpi_backend/: ProcessGroupHMPI.cpp  ProcessGroupHMPI.hpp  compiler.sh  dist_test.py  test.sh  test_base.sh
(+582 files in other folders)
